...
    "common.share": {
      "extractionState": "stale",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Share"
          }
        },
        "es": {
          "stringUnit": {
            "state": "new",
            "value": "Share"
...
    "errors.save_fail.title": {
      "extractionState": "stale",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "We could not save that look"
          }
        },
        "es": {
          "stringUnit": {
            "state": "new",
            "value": "We could not save that look"
...
    "mirror.controls.flip_camera": {
      "extractionState": "stale",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Flip camera"
          }
        },
        "es": {
          "stringUnit": {
            "state": "new",
            "value": "Flip camera"
...
    },
    "preview.title": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Preview"
          }
        },
        "es": {
          "stringUnit": {
            "state": "new",
            "value": "Preview"
...
